setup responses module improvements including support for multiple profiles